<resources>
    <string name="app_name" translatable="false">rtjhApp</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="seconds">Minutes</string>
    <string name="_00">00</string>
    <string name="colon">:</string>
    <string name="todo">TODO</string>
    <string name="circleProcess">设置圆环进度</string>
    <string name="celsius">℃</string>
    <string name="percent">%</string>
    <string name="systemNormal">系统正常</string>
    <string name="dutyRunning">值班运行</string>
    <string name="systemError">系统故障</string>
    <string name="systemWaring">系统报警</string>
    <string name="negPreOpera">负压运行</string>
    <string name="songName">歌曲名称</string>
    <string name="lowStress">低压</string>
    <string name="highStress">高压</string>
    <string name="normalStress">正常</string>
    <string name="differentialPressureValue">00.0Pa</string>
    <string name="differentialPressure">压差</string>
    <string-array name="setting_options">
        <item>串口设置</item>
        <item>空调设置</item>
        <item>显示设置</item>
        <item>智能模式及消毒</item>
        <item>使用说明书</item>
        <item>退出程序</item>
        <!--        <item>服务器设置</item>-->
    </string-array>
    <string name="list_item_format">%s</string>
    <string name="callSerialPort">电话模块串口号：</string>
    <string name="airConditionPort">空调模块串口号：</string>
    <string name="controlSerialPort">控制模块串口号：</string>
    <string name="pronunciationSerialPort">语音模块串口号：</string>
    <string name="readRegisterNum">读取寄存器的个数:</string>
    <string name="basic">请输入</string>
    <string name="save">保存</string>
    <!--图标-->
    <string-array name="icon_font_codes">
        <item>"&#xe7c8;"</item> <!-- 串口设置 -->
        <item>"&#xe617;"</item> <!-- 空调设置 -->
        <item>"&#xe7c3;"</item> <!-- 显示设置 -->
        <item>"&#xe69b;"</item> <!-- 智能模式及消毒设置 -->
        <item>"&#xe614;"</item> <!-- 使用说明书 -->
        <!--        <item>"&#xe694;"</item>--> <!-- 服务器设置 -->
        <item>"&#xe655;"</item> <!-- 退出程序 -->
    </string-array>
    <string name="readOrder">读取数据指令</string>
    <string name="slave">站号</string>
    <string name="readSlavePlaceholder">请输入站号</string>
    <string name="readOrderPlaceholder">请输入读取数据指令</string>
    <string name="powerOnOff">开关机设置------</string>
    <string name="powerOn">开机指令</string>
    <string name="powerOff">关机指令</string>
    <string name="powerOnPlaceholder">请输入开机指令</string>
    <string name="powerOffPlaceholder">请输入关机指令</string>
    <string name="returnWind">回风部分------</string>
    <string name="returnHum">回风湿度</string>
    <string name="returnTem">回风温度</string>
    <string name="registerNum">寄存器号:</string>
    <string name="humReturnEcho">湿度回显是否/10:</string>
    <string name="temReturnEcho">温度回显是否/10:</string>
    <string name="settingHumTem">温湿度设置部分------</string>
    <string name="settingHum">设置湿度:</string>
    <string name="settingTem">设置温度:</string>
    <string name="humSettingEcho">湿度设置是否*10:</string>
    <string name="temSettingEcho">温度设置是否*10:</string>
    <string name="humMax">湿度最大值:</string>
    <string name="humMin">湿度最小值:</string>
    <string name="temMax">温度最大值:</string>
    <string name="temMin">温度最小值：</string>
    <string name="other">其他设置部分------</string>
    <string name="runningStatus">运行状态:</string>
    <string name="UnitFailure">机组故障:</string>
    <string name="systemErrors">机组报警:</string>
    <string name="dutyMode">值班模式:</string>
    <string name="pressToggle">正负压切换:</string>
    <string name="runningTime">累计时长:</string>
    <string name="airTodo">TODO</string>
    <string name="duty">值班</string>
    <string name="negeToggle">正负压切换</string>
    <string name="yacha">压差表</string>
    <string name="lighting1">照明1</string>
    <string name="lighting2">照明2</string>
    <string name="viewingLights">观片灯</string>
    <string name="noShadowLights">无影灯</string>
    <string name="surgicalLights">手术灯</string>
    <string name="exhaustFan">排风机</string>
    <string name="disinfect">消毒</string>
    <string name="firefighting">消防</string>
    <string name="power">电源</string>
    <string name="silence">消音</string>
    <string name="spare1">备用1</string>
    <string name="spare2">备用2</string>
    <string name="spare3">备用3</string>
    <string name="spare4">备用4</string>
    <string name="disinfectSettings">消毒部分------</string>
    <string name="disinfectRemarks">当消毒时长为0时可手动控制消毒开关</string>
    <string name="disinfectTime">消毒时长:</string>
    <string name="smartSettings">智能控制部分------</string>
    <string name="smartRemarks">开启开机消毒，点击空调机组开机即可下发消毒指令</string>
    <string name="powerOnDisinfect">开机消毒</string>
    <string name="back_button_description">返回</string>
    <string name="smartLightRemarks">当照明关闭延时为0时，关闭灯光不会延时关闭</string>
    <string name="lightDelayTime">照明延时:</string>
    <string name="surgicalTime">手术正计时</string>
    <string name="localTime">本地时间</string>
    <string name="aneaTIme">麻醉计时</string>
    <string name="add">添加</string>
    <string name="cancel">取消</string>
    <string name="phoneNumber">电话号码:</string>
    <string name="specialName">专呼名称:</string>
    <string name="sure">确定</string>
</resources>