<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="550dp"
    android:layout_gravity="center"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:id="@+id/serial_port_setting_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        android:radius="16dp"
        tools:ignore="MissingConstraints">

        <!-- 电话模块-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/callSerialPort"
                android:textColor="@color/settingOptionTextColor"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/call_serial_port"
                style="@style/InputBoxStyle"
                android:autofillHints="@string/basic"
                android:hint="@string/basic"
                android:inputType="text" />
        </LinearLayout>

        <!-- 空调模块 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/airConditionPort"
                android:textColor="@color/settingOptionTextColor"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/air_condition_serial_port"
                style="@style/InputBoxStyle"
                android:autofillHints="@string/basic"
                android:hint="@string/basic"
                android:inputType="text" />
        </LinearLayout>

        <!-- 控制模块 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/controlSerialPort"
                android:textColor="@color/settingOptionTextColor"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/control_serial_port"
                style="@style/InputBoxStyle"
                android:autofillHints="@string/basic"
                android:hint="@string/basic"
                android:inputType="text" />
        </LinearLayout>

        <!-- 语音模块 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/pronunciationSerialPort"
                android:textColor="@color/settingOptionTextColor"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/pronunciation_serial_port"
                style="@style/InputBoxStyle"
                android:autofillHints="@string/basic"
                android:hint="@string/basic"
                android:inputType="text" />
        </LinearLayout>

        <TextView
            android:id="@+id/serial_port_setting_save_btn"
            style="@style/btnStyle"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/save" />

    </LinearLayout>
</androidx.cardview.widget.CardView>