<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="60dp"
        android:paddingEnd="60dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp">

            <LinearLayout
                android:id="@+id/different_gauge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical">

                    <TextView
                        style="@style/bottomText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/differentialPressureValue" />

                    <TextView
                        style="@style/bottomText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/differentialPressure" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end">

                <ImageView
                    android:id="@+id/integrated_control"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_gravity="end"
                    android:src="@drawable/integrated_control" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/lighting1_btn"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/lights1_unselected" />

                    <TextView
                        style="@style/bottomText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/lighting1" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/lighting2_btn"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/lights2_unselected" />

                    <TextView
                        style="@style/bottomText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/lighting2" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/viewing_lights_btn"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/viewing_lights_unselected" />

                    <TextView
                        style="@style/bottomText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/viewingLights" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/no_shadow_lights_btn"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/no_shaodw_lights_unselected" />

                    <TextView
                        style="@style/bottomText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/noShadowLights" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/surgical_lights_btn"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/surgical_lights_unselected" />

                    <TextView
                        style="@style/bottomText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/surgicalLights" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/exhaust_fan_btn"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/exhaust_fan_unselected" />

                    <TextView
                        style="@style/bottomText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/exhaustFan" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/disinfect_btn"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/spare_unselected" />

                    <TextView
                        style="@style/bottomText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/disinfect" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/firefighting_btn"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/firefighting_unselected" />

                    <TextView
                        style="@style/bottomText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/firefighting" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/power_btn"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/power_unselected" />

                    <TextView
                        style="@style/bottomText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/power" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/silence_btn"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/silence_unselected" />

                    <TextView
                        style="@style/bottomText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/silence" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/spare1_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/spare1_btn"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/spare_unselected" />

                    <TextView
                        style="@style/bottomText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/spare1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/spare2_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/spare2_btn"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/spare_unselected" />

                    <TextView
                        style="@style/bottomText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/spare2" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/spare3_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/spare3_btn"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/spare_unselected" />

                    <TextView
                        style="@style/bottomText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/spare3" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/spare4_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/spare4_btn"
                        android:layout_width="40dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/spare_unselected" />

                    <TextView
                        style="@style/bottomText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/spare4" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>