<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/add_special_call_dialog"
        android:layout_width="@dimen/small_dialog_width"
        android:layout_height="@dimen/small_dialog_height"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:id="@+id/special_call_name_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical">
            <TextView
                style="@style/settingTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/specialName"/>
            <EditText
                android:id="@+id/special_name_edit_text"
                android:layout_width="@dimen/short_edit_width"
                android:layout_height="wrap_content"
                style="@style/dialogInputStyle"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/special_call_number_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical">
            <TextView
                style="@style/settingTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phoneNumber"/>
            <EditText
                android:id="@+id/special_call_number_edit_text"
                android:layout_width="@dimen/short_edit_width"
                android:layout_height="wrap_content"
                android:inputType="phone"
                style="@style/dialogInputStyle"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingEnd="80dp"
            android:gravity="end">
            <TextView
                android:id="@+id/submit_btn"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:text="@string/sure"
                android:gravity="center"
                android:background="@color/sureBtnColor"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>